--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "url": "https://github.com/jeremy-roblox/ProxyService.git"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "MIT"
 }
